# QtModelViewer

./: .gitignore  CMakeLists.txt  MyQtApp.pro
include/: Object3D.h  mainwindow.h  viewport3d.h
src/: Object3D.cpp  main.cpp  mainwindow.cpp  viewport3d.cpp
